--- a/src/Components/pages/About.css
+++ b/src/Components/pages/About.css
@@ -50,8 +50,8 @@ h3 {
   }
 
   .picture {
-    height: 450px;
-    width: 400px;
+    height: 350px;
+    width: 280px;
     display: block;
     margin-left: auto;
     margin-right: auto;
